# rocket-league

./: pyproject.toml
src/rocket_league/data/: api.py
src/rocket_league/models/: model.py
src/rocket_league/models/classes/: LMORegionPriors.py
src/rocket_league/models/utils/: mcmc.py  svi.py
