[project]
name = "rocket-league"
description = "Default template for PDM package"
authors = [
    {name = "Nate Weller", email = "65962708+nateweller1@users.noreply.github.com"},
]
dependencies = [
    "pandas~=2.2.0",
    "hyperopt==0.2.5",
    "polars~=0.20.1",
    "pyarrow==14.0.1",
    "requests>=2.7.0",
    "numpyro~=0.17",
    "scikit-learn~=1.3.2",
]
requires-python = "==3.11.*"
license = {text = "MIT"}
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
version = "0.1.0"
readme = "README.md"

[tool.pdm]
distribution = false
